[FEATURE] kNN Classifier [Dual]
